fixed padding problem creating overflow x

--- a/src/main/react/src/index.css
+++ b/src/main/react/src/index.css
@@ -643,9 +643,10 @@ a.text-blue:hover {
 
 
 /* COLUMN SYSTEM */
-
-.list-wrapper:first-child {
-    margin-left: 8px;
+#column-board {
+    white-space: nowrap;
+    margin-bottom: 8px;
+    user-select: none;
 }
 
 .list-wrapper {
@@ -664,7 +665,7 @@ a.text-blue:hover {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    max-height: 100%;
+    max-height: 70vh;
     position: relative;
     white-space: normal;
 }
@@ -672,12 +673,12 @@ a.text-blue:hover {
 
 .list-cards {
     flex: 1 1 auto;
-    overflow-y: auto;
-    overflow-x: hidden;
     margin: 0 4px;
     padding: 0 4px;
     z-index: 1;
     min-height: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .list-card {
@@ -696,14 +697,6 @@ a.text-blue:hover {
 
 .not-selected {
     opacity: 0.3;
-}
-
-#column-board {
-    white-space: nowrap;
-    margin-bottom: 8px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    user-select: none;
 }
 
 .list-header {
